PythonJobInterview/charts/jenkins-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-jnlp
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 50000
      protocol: TCP
      targetPort: 50000
    # nodePort: 50000  #  use with type: NodePort
  selector:
    app.kubernetes.io/name: jenkins
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
